--- a/Bookstore/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Bookstore/Areas/Customer/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using Bookstore.Models
 @using Bookstore.Models.Models
 @using Bookstore.DataAccess
+@using Bookstore.Models.ViewModel
+@using Newtonsoft.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
