add search add card small schange

--- a/Bookstore/Areas/Admin/Views/Book/Index.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Index.cshtml
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="card-footer bg-transparent">
                                     <a asp-controller="Book" asp-action="Upsert" asp-route-bookId="@book.BookId" class="btn btn-success border-0 form-control">
-                                        Details
+                                        Edit
                                     </a>
                                 </div>
                             </div>
