--- a/Bookstore/Areas/Customer/Views/Home/Details.cshtml
+++ b/Bookstore/Areas/Customer/Views/Home/Details.cshtml
@@ -40,7 +40,7 @@
 
             </form>
         </div>
-        <div class="col-4">
+        <div class="col-5">
             <div>
                 Рейтинг: 9.6
                 <i class="bi bi-star-fill"></i>
@@ -53,7 +53,7 @@
                 }
             </div>
             <div class="">
-                @Model.Description
+                @Html.Raw(Model.Description)
             </div>
         </div>
     </div>
@@ -64,24 +64,8 @@
     <hr />
     <div class="mb-5 pb-5">
         <div>
-            Обожаю слушать лекции Сурдина на ютубе, и вот наконец-то он написал книгу!
-            Как всегда, замечательное изложение, множество интересных и неочевидных на первый взгляд фактов - и все это изложено понятным языком.
-            Рекомендую всем, кто очарован красотой науки и любит астрономию!
+            
         </div>
-        <hr />
-        <div>
-            Очень довольна, что купила эту книгу. Тоже люблю смотреть и слушать лекции Владимира Сурдина на Ютубе, с моей точки зрения это один из лучших, а, возможно, и самый лучший популяризатор науки, во всяком случае из российских.
-            Единственный недостаток книги - мелковатый шрифт для литературы подобного рода. Понятно, что более крупный шрифт привёл бы к удорожанию, но я, например, предпочла бы заплатить побольше, чем напрягать зрение.
-            В остальном недостатков пока не обнаружила.
-            Книгу рекомендую
-        </div>
-        <hr />
-        <div>
-            ЛУНА ЦВЕТНАЯ. Это первое поразившее меня открытие из этой книги.
-            Больше спойлерить не буду, читайте сами. Здесь много такого, о чем мы вообще не подозреваем.
-            Ужасно жаль, что в школе такого и ТАК не преподавали. Ну или хорошо — иначе все бы захотели быть поголовно астрономами.
-            Не знаю, есть ли сейчас астрономия в школах, но точно знаю, что эта книга лучше любого учебника.
-            Нравится, что построена не в хронологическом порядке — мол, так учёные начали изучать космос, а теперь вот так изучают— а...
-        </div>
+        <hr />        
     </div>
 </div>
