--- a/Bookstore/Areas/Customer/Views/Wishlist/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Wishlist/Index.cshtml
@@ -15,11 +15,11 @@ else
 
     @if (wishlist.Count() == 0)
     {
-        <h1>Empty Wish List</h1>
+        <h1>Нет отложенных товаров</h1>
     }
     else
     {
-        <h1>Wish List</h1>
+        <h1>Отложенные товары</h1>
     }
 
     <div class="row row-cols-2">
