--- a/Bookstore/Areas/Identity/Views/User/Profile.cshtml
+++ b/Bookstore/Areas/Identity/Views/User/Profile.cshtml
@@ -59,10 +59,10 @@
             </div>
         </div>
         <div class="mt-2">
-            <button type="submit" class="btn btn-warning">Save Changes</button>
+            <button type="submit" class="btn btn-warning">Сохранить изменения</button>
         </div>
         <div class="mt-2">
-            <button asp-area="Identity" asp-controller="User" asp-action="GoOut" class="btn btn-link">Go out</button>
+            <button asp-area="Identity" asp-controller="User" asp-action="GoOut" class="btn btn-dark">Выйти с аккаунта</button>
         </div>
     </form>
 </div>
