--- a/Bookstore/Areas/Purchase/Views/Purchase/Payment.cshtml
+++ b/Bookstore/Areas/Purchase/Views/Purchase/Payment.cshtml
@@ -29,7 +29,7 @@
                 <label for="cvv">CVV</label>
                 <input type="number" class="form-control" id="cvv" name="CVV" required>
             </div>
-            <button asp-area="Purchase" asp-controller="Purchase" asp-action="FundsVerification" class="btn btn-primary w-100 mt-3">Buy</button>
+            <button asp-area="Purchase" asp-controller="Purchase" asp-action="FundsVerification" class="btn btn-primary w-100 mt-3">Оплатить</button>
         </form>
     </div>
 </div>
