--- a/Bookstore/Areas/Admin/Views/Book/Delete.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Delete.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="text-center">
             <div class="col text-center">
-                <button type="submit" class="btn btn-danger form-control">Delete</button>
+                <button type="submit" class="btn btn-danger form-control">Удалить</button>
             </div>
         </div>
     </div>
