--- a/Bookstore/Areas/Admin/Views/Book/Index.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Index.cshtml
@@ -6,11 +6,11 @@
 @model BookVM
 
 <div class="col-2 pb-3 mt-2 pt-3 text-right">
-    <a asp-action="Upsert" class="btn btn-warning border-0 form-control">Add New Book</a>
+    <a asp-action="Upsert" class="btn btn-warning border-0 form-control">Добавить книгу</a>
 </div>
 
 <div class="">
-    <h5>Total: @db.Books.Count()</h5>
+    <h5>Всего книг: @db.Books.Count()</h5>
 </div>
 
 <div class="container-fluid">
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="card-footer bg-transparent">
                                     <a asp-controller="Book" asp-action="Upsert" asp-route-bookId="@book.BookId" class="btn btn-success border-0 form-control">
-                                        Edit
+                                        Изменить
                                     </a>
                                 </div>
                             </div>
