--- a/Bookstore/Areas/Admin/Views/Book/Upsert.cshtml
+++ b/Bookstore/Areas/Admin/Views/Book/Upsert.cshtml
@@ -4,84 +4,101 @@
     <div class="text-center">
         @if (Model.Book.BookId != 0)
         {
-            <h2>Change the book</h2>
+            <h2>Обновить данные книги</h2>
         }
         else
         {
-            <h2>Add new Book</h2>
+            <h2>Добавить новую книгу</h2>
         }
     </div>
 
 
     <div class="container">
-        <div class="row">
-            <form method="post" class="row" enctype="multipart/form-data">
-                <input asp-for="Book.BookId" hidden />
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <input asp-for="Book.Title" class="form-control border-0 shadow" />
-                    <label asp-for="Book.Title" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.Title" class="text-danger"></span>
+
+        <form method="post" class="row" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col-3">
+                    <input asp-for="Book.BookId" hidden />
+                    <div class="form-floating mb-2 pb-2 mt-2">
+                        <input asp-for="Book.Title" class="form-control border-0 shadow" />
+                        <label asp-for="Book.Title" class="ms-1 my-1 text-dark">Название</label>
+                        <span asp-validation-for="Book.Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-2 pb-2">
+                        <input asp-for="Book.Author" class="form-control border-0 shadow" />
+                        <label asp-for="Book.Author" class="ms-1 my-1 text-dark">Автор</label>
+                        <span asp-validation-for="Book.Author" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-2 pb-2">
+                        <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
+                        <label asp-for="Book.ISBN" class="ms-1 my-1 text-dark"></label>
+                        <span asp-validation-for="Book.ISBN" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-2 pb-2">
+                        <input asp-for="Book.Price" class="form-control border-0 shadow" />
+                        <label asp-for="Book.Price" class="ms-1 my-1 text-dark">Цена</label>
+                        <span asp-validation-for="Book.Price" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-2 pb-2">
+                        <input asp-for="Book.ImageURL" class="form-control border-0 shadow" />
+                        <label asp-for="Book.ImageURL" class="ms-1 my-1 text-dark">Ссылка на картинку</label>
+                        <span asp-validation-for="Book.ImageURL" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-2 pb-2">
+                        <select asp-for="Book.Category" class="form-control border-0 shadow">
+                            <option value="">Выберите категорию</option>
+                            @foreach (var category in Model.CategoriesList ?? Enumerable.Empty<Category>())
+                            {
+                                <option value="@category.Id">@category.Name</option>
+                            }
+                        </select>
+                        <label asp-for="Book.Category" class="ms-1 my-1 text-dark text-muted">Жанр</label>
+                        <span asp-validation-for="Book.Category" class="text-danger"></span>
+                    </div>
                 </div>
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <input asp-for="Book.Author" class="form-control border-0 shadow" />
-                    <label asp-for="Book.Author" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.Author" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <input asp-for="Book.ISBN" class="form-control border-0 shadow" />
-                    <label asp-for="Book.ISBN" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <input asp-for="Book.Price" class="form-control border-0 shadow" />
-                    <label asp-for="Book.Price" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.Price" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <input asp-for="Book.Description" class="form-control border-0 shadow" />
-                    <label asp-for="Book.Description" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.Description" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <input asp-for="Book.ImageURL" class="form-control border-0 shadow" />
-                    <label asp-for="Book.ImageURL" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.ImageURL" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-5 mt-xxl-4">
-                    <select asp-for="Book.Category" class="form-control border-0 shadow">
-                        <option value="">Выберите категорию</option>
-                        @foreach (var category in Model.CategoriesList ?? Enumerable.Empty<Category>())
-                        {
-                            <option value="@category.Id">@category.Name</option>
-                        }
-                    </select>
-                    <label asp-for="Book.Category" class="ms-1 my-1 text-dark"></label>
-                    <span asp-validation-for="Book.Category" class="text-danger"></span>
+                <div class="col-7 flex-lg-column d-flex h-auto">
+                    <div class="form-floating py-2">
+                        <label asp-for="Book.Description" class="ms-2 text-muted">Описание</label>
+                        <textarea asp-for="Book.Description" class="form-control border-0 shadow"></textarea>
+                    </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-2">
                     @if (Model.Book.BookId != 0)
                     {
-                        <div class="container mt-4">
+                        <div class="container mt-4 ">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col text-center">
-                                    <a class="btn btn-danger mb-1" asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Book.BookId">Delete</a>
+                                <div class="text-center">
+                                    <a class="btn btn-danger mb-3" asp-action="Delete" asp-controller="Book" asp-route-id="@Model.Book.BookId">Удалить</a>
                                 </div>
-                                <div class="col text-center">
-                                    <button type="submit" class="btn btn-success form-control">Update</button>
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-success form-control">Обновить</button>
                                 </div>
                             </div>
                         </div>
                     }
                     else
                     {
-                        <button type="submit" class="btn btn-success form-control">Create</button>
+                        <button type="submit" class="btn btn-success form-control">Создать</button>
                     }
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
-
-
-
 </div>
+
+
+
+
+@section Scripts{
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons  lists   table visualblocks wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough |  align lineheight | numlist bullist indent outdent',
+        });
+    </script>
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
