--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -52,7 +52,7 @@
                                 <td>
                                     <a class="" asp-area="Customer" asp-controller="Home" asp-action="Details" asp-route-productId="@product.ProdId">
                                         @db.Books.Find(product.ProdId).Title
-                                    </a>                                    
+                                    </a>
                                 </td>
                                 <td>@product.Price</td>
                                 <td>@product.Count</td>
@@ -95,17 +95,19 @@
                 </div>
             </div>
             <hr class="mt-5 mb-5" />
+
+
+            <div>
+            <form method="post" asp-area="">
+            <button type="submit" ></button>
+            </form>            
+            </div>
+
         }
     </div>
 </div>
 
-@*
-    <div class="form-group">
-    <input asp-for="@order.OrderStatus" class="form-control" />
-    </div>
 
-
-    }*@
 
 
 @*<div class="form-group">
