--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bookstore</title>
+    <title>Минота́вр </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Bookstore.styles.css" asp-append-version="true" />
@@ -23,17 +23,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-4">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-4 rounded-bottom-2">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" asp-area="Customer" asp-controller="Home" asp-action="Index"> Bookstore</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <a class="navbar-brand text-light " asp-area="Customer" asp-controller="Home" asp-action="Index"> Минота́вр </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div>
                     <form class="d-flex" method="post" asp-area="Customer" asp-controller="Home" asp-action="Search">
-                        <input class="form-control me-sm-1 bg-light" type="search" name="searchString" placeholder=" Search">
-                        <button class="btn btn-dark my-4 my-sm-0" type="submit" ><i class="bi bi-search"></i></button>
+                        <input class="form-control me-sm-1 bg-light" type="search" name="searchString" placeholder="Поиск">
+                        <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
@@ -42,44 +42,66 @@
                     {
                         int? idUserFromHttpContext = httpContext.Session.GetInt32("Username");
 
-                        User user = db.User.FirstOrDefault(u => u.UserId == idUserFromHttpContext);
+                        User? user = db.User.FirstOrDefault(u => u.UserId == idUserFromHttpContext);
 
-                        if (db.Roles.Find(user.UserId) != null)
+                        if (db.Roles.First(u => u.UserId == user.UserId) != null)
                         {
-                            <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item dropdown">
-                                    <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Manager
-                                    </button>
-                                    <ul class="dropdown-menu dropdown-menu-dark">
-                                        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Books</a></li>
-                                        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            if (db.Roles.First(u => u.UserId == user.UserId).RoleName == SD.RoleAdmin)
+                            {
+                                <ul class="navbar-nav flex-grow-1">
+                                    <li class="nav-item dropdown">
+                                        <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Управление
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-dark">
+                                            <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Книги</a></li>
+                                            <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            }
+
+
+                            if ((db.Roles.First(u => u.UserId == user.UserId) != null) && (db.Roles.First(u => u.UserId == user.UserId).RoleName == SD.RoleWorkerOrderPickupPoint))
+                            {
+                                <ul class="navbar-nav flex-grow-1">
+                                    <li class="nav-item dropdown">
+                                        <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Управление заказами
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-dark">
+                                            <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="Order" asp-action="Order">Проверить заказ</a></li>
+                                            <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="Order" asp-action="Order">Прием заказа</a></li>
+                                            <li><a class="nav-link text-light" asp-area="WorkerOrderPickupPoint" asp-controller="Order" asp-action="Order">Выдача заказ</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            }
                         }
+
+
 
                         if (user != null)
                         {
                             <ul class="navbar-nav flex-grow-1 justify-content-end">
                                 <li>
                                     <a class="nav-link text-light" asp-area="Customer" asp-controller="Wishlist" asp-action="Index">
-                                        <i class="bi bi-bookmark-fill"></i>Wish List
+                                        <i class="bi bi-bookmark-fill"></i>Отложено
                                     </a>
                                 </li>
                                 <li>
                                     <a class="nav-link text-light" asp-area="Customer" asp-controller="ShoppingBasket" asp-action="Index" asp-route-bookId="null">
-                                        <i class="bi bi-bag-check-fill"></i>Shopping Basket
+                                        <i class="bi bi-bag-check-fill"></i>Корзина
                                     </a>
                                 </li>
                                 <li>
                                     <a class="nav-link text-light" asp-area="Customer" asp-controller="Orders" asp-action="Index" asp-route-bookId="null">
-                                        <i class="bi bi-box-seam"></i>Orders
+                                        <i class="bi bi-box-seam"></i>Заказы
                                     </a>
                                 </li>
                                 <li>
                                     <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
-                                        <i class="bi bi-chat-dots-fill"></i> Messages
+                                        <i class="bi bi-chat-dots-fill"></i> Сообщения
                                     </a>
                                 </li>
                                 <li>
@@ -115,7 +137,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Bookstore - <a asp-area="" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield-check"></i> Privacy</a>
+            &copy; 2023 - Минота́вр - <a asp-area="" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield-check"></i>Соглашение</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -123,6 +145,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/p84zgz2zivny0yu94x04y98z4spl2bo2i5s5bswvjfygq36r/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
