--- a/Bookstore/Views/_ViewImports.cshtml
+++ b/Bookstore/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Bookstore
 @using Bookstore.Models
+@using Bookstore.Models.SD
 @using Bookstore.DataAccess
 @using Bookstore.Areas.Customer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
