--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h1>Orders</h1>
+<h1>Заказы</h1>
 <div class="container">
     <div class="row ">
         @foreach (Order order in Model.OrderData)
@@ -95,14 +95,6 @@
                 </div>
             </div>
             <hr class="mt-5 mb-5" />
-
-
-            <div>
-            <form method="post" asp-area="">
-            <button type="submit" ></button>
-            </form>            
-            </div>
-
         }
     </div>
 </div>
