--- a/Bookstore/Areas/Customer/Views/ShoppingBasket/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/ShoppingBasket/Index.cshtml
@@ -85,7 +85,6 @@ else
                     sumCountProduct += countProduct;
                     sumPurchase += Convert.ToInt32(price) * countProduct;
                 }
-
                 <div>
                     @if (sumCountProduct == 1)
                     {
@@ -99,7 +98,7 @@ else
                     }
                 </div>
                 <form method="post">
-                    <button asp-area="Purchase" asp-controller="Purchase" asp-action="DeliveryInformation" asp-route-purchaseАmount="@sumPurchase"
+                    <button asp-area="Purchase" asp-controller="Purchase" asp-action="FillRecipientDate" asp-route-purchaseАmount="@sumPurchase"
                             type="submit" class="btn btn-success">
                         <i class="bi bi-bag-fill"></i> Оформить заказ
                     </button>
