--- a/Bookstore/Areas/Purchase/Views/Purchase/Payment.cshtml
+++ b/Bookstore/Areas/Purchase/Views/Purchase/Payment.cshtml
@@ -4,18 +4,17 @@
 <div class="row justify-content-center">
     <div class="col-sm-8 col-md-6 col-lg-4">
         <h1 class="text-center">Payment</h1>
-        <form asp-area="Purchase" asp-controller="Payment" asp-action="ProcessPayment" method="post">
+        <form method="post" enctype="multipart/form-data asp-area="Purchase" asp-controller="Payment">
+            
             <input asp-for="UserId" hidden />
             <input asp-for="PurchaseAmount" hidden />
             <input asp-for="ReceiverName" hidden />
             <input asp-for="RecipientsLastName" hidden />
             <input asp-for="PhoneNumber" hidden />
             <input asp-for="isCourierDelivery" hidden />
-            <input asp-for="Region" hidden />
             <input asp-for="City" hidden />
             <input asp-for="Street" hidden />
             <input asp-for="HouseNumber" hidden />
-            <input asp-for="PurchaseDate" hidden />
 
             <div class="form-group">
                 <label for="cardNumber">Номер карты</label>
@@ -29,7 +28,7 @@
                 <label for="cvv">CVV</label>
                 <input type="number" class="form-control" id="cvv" name="CVV" required>
             </div>
-            <button asp-area="Purchase" asp-controller="Purchase" asp-action="FundsVerification" class="btn btn-primary w-100 mt-3">Оплатить</button>
+            <button type="submit" asp-action="FundsVerification" class="btn btn-primary w-100 mt-3">Оплатить</button>
         </form>
     </div>
 </div>
