add new table notification

--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/Order/Order.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/Order/Order.cshtml
@@ -105,8 +105,10 @@
                     @Model.PhoneNumber
                 </div>
             </div>
+
+            <button class="btn btn-success mt-2">Уведомить клиента</button>
         </div>
         <hr class="mt-5 mb-5" />
-                
+
     </div>
 }
