--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="nav-link text-light" asp-area="" asp-controller="" asp-action="">
+                                    <a class="nav-link text-light" asp-area="Customer" asp-controller="NotificationCustomer" asp-action="Index">
                                         <i class="bi bi-chat-dots-fill"></i> Сообщения
                                     </a>
                                 </li>
